--- a/node/manifest.yml
+++ b/node/manifest.yml
@@ -1,6 +1,6 @@
 applications:
 - name:      bluemix-todo-node
-  host:      bluemix-todo-node
+  host:      AMADOUM
   memory:    128M
   services:
   - todo-db 
